<resources>
    <string name="app_name">CargoTruckMobile</string>
    <string name="admin_panel">Administration panel</string>
    <string name="user">User</string>
    <string name="cargo">Cargo</string>
    <string name="container">Container</string>
    <string name="sensor">Sensor</string>
    <string name="car">Car</string>
    <string name="driver">Driver</string>
    <string name="backup">Create Backup</string>
    <string name="parcel_number">Parcel number</string>
    <string name="sender">Sender</string>
    <string name="sender_city">Senser city:</string>
    <string name="sender_address">Addresses:</string>
    <string name="sender_phone">Phone:</string>
    <string name="sender_name">PIB:</string>
    <string name="receiver">Receiver</string>
    <string name="receiver_city">City Reciver:</string>
    <string name="receiver_address">Addresses:</string>
    <string name="receiver_phone">Phone:</string>
    <string name="receiver_name">PIB:</string>
    <string name="package_info">INFORMATION ABOUT THE PACKAGE</string>
    <string name="dimensions">Dimensions:</string>
    <string name="package_weight">Weight:</string>
    <string name="package_description">Description of package:</string>
    <string name="delivery_cost">Delivery cost:</string>
    <string name="show_map">Take a look at the place of reboot</string>
    <string name="email">Electronic mail</string>
    <string name="password">Password</string>
    <string name="authorization">Authorization</string>
    <string name="login">Login</string>
    <string name="record">I haven’t made a cloud record yet</string>
    <string name="sent_cargos">Sent cargoes</string>
    <string name="createdelivery">Create delivery</string>
    <string name="cargos_to_receive">Cargos to receive</string>
    <string name="my_cabinet">My cabinet</string>
    <string name="my_shipments">My Shipments</string>
    <string name="my_pickup">My items for pickup</string>
    <string name="register">Register</string>
    <string name="first_name">My first name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_account">Already have an account</string>
    <string name="register_button">Register</string>
    <string name="patronym">Patronymic</string>
    <string name="phone_number">Phone number</string>
    <string name="save">Save</string>
    <string name="adminanel">Go to administration</string>
    <string name="logist_panel">Control panel for logistician</string>
    <string name="sign_out">Sign out</string>
    <string name="cargo_number">Number</string>
    <string name="cargo_name">Name</string>
    <string name="cargo_status">Status</string>
    <string name="create_journey">Create a journey</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="create_manifest">Create manifest</string>
    <string name="manifest_number">Manifest number</string>
    <string name="confirm">Confirm</string>
    <string name="сargoes_processing">Cargoes for processing</string>
    <string name="view_container_statistics">View container statistics</string>
    <string name="view_trip_statistics">View trip statistics</string>
    <string name="find_nearest_container">Find nearest container</string>
    <string name="accept_cargo">Accept cargo</string>
</resources>