<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Номер посилки -->
    <TextView
        android:id="@+id/parcel_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/parcel_number"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <!-- Відправник -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/sender_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender_city"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sender_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender_address"
        android:textSize="14sp" />

        <TextView
            android:id="@+id/sender_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender_phone"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sender_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sender_name"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Одержувач -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/receiver_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_city"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/receiver_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_address"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/receiver_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_phone"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/receiver_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_name"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- Інформація про посилку -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/package_info"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/dimensions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dimensions"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/package_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/package_weight"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/package_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/package_description"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/delivery_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_cost"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_show_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:backgroundTint="@android:color/background_light"
        android:padding="16dp"
        android:text="@string/show_map"
        android:textColor="#000000" />
</LinearLayout>
