<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LogistActivity.LogistActivity">

    <Button
        android:id="@+id/btn_view_container_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_container_statistics"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btn_view_trip_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_trip_statistics"
        android:layout_below="@id/btn_view_container_statistics"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_find_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_nearest_container"
        android:layout_below="@id/btn_view_trip_statistics"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_accept_cargo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_cargo"
        android:layout_below="@id/btn_find_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
</RelativeLayout>